--- a/discord-backend/.env.example
+++ b/discord-backend/.env.example
@@ -1,2 +1,3 @@
 API_PORT=5002
 MONGO_URI=mongodb+srv://kirandash:<password>@cluster0.amvhq1q.mongodb.net/<dbname>?retryWrites=true&w=majority
+TOKEN_KEY=hereShouldGoStrongTokenKey
